# avogadrolibs

./: .travis.yml  appveyor.yml  setup.py
.circleci/: config.yml
avogadro/: CMakeLists.txt
avogadro/qtplugins/: CMakeLists.txt
avogadro/qtplugins/clientserver/: CMakeLists.txt  FileDialog.ui  avogadroserver.cpp  avoremotefilesystemservice.cpp  avoremotefilesystemservice.h  avoremotemoleculeservice.cpp  avoremotemoleculeservice.h  connectionsettingsdialog.cpp  connectionsettingsdialog.ui  filedialog.cpp  filedialog.h  filedialogfilter.cpp  filedialogfilter.h  filedialogmodel.cpp  filedialogmodel.h  remote.proto  remotemolecule.cpp  remotemolecule.h  vtkPVFileInformation.cpp  vtkPVFileInformation.h
scripts/appveyor/: upload-pypi.ps1
scripts/circleci/: dockcross-manylinux-build-module-wheels.sh  manylinux-build-module-wheels.sh  upload_pypi.sh
scripts/travis/: build.sh  deploy.sh  install.sh  macpython-install-python.sh
